versions/v2.11/modules/en/pages/observability/istio/configuration/install-istio-on-rke2-cluster.adoc
= Additional Steps for Installing Istio on {rke2-product-name} and {k3s-product-name} Clusters
:page-languages: [en, zh]
:revdate: 2025-04-24
:page-revdate: {revdate}
:page-community-path: integrations-in-rancher/istio/configuration-options/install-istio-on-rke2-cluster.adoc 
:page-product-path: observability/istio/configuration/install-istio-on-rke2-cluster.adoc

[WARNING]
====
https://github.com/rancher/charts/tree/release-v2.11/charts/rancher-istio[Rancher-Istio] will be deprecated in Rancher v2.12.0; turn to the https://apps.rancher.io[SUSE Application Collection] build of Istio for enhanced security (included in SUSE Rancher Prime subscriptions).
Detailed information can be found in https://forums.suse.com/t/deprecation-of-rancher-istio/45043[this announcement]
====

When installing or upgrading the Istio Helm chart through *Apps,*

. If you are installing the chart, click *Customize Helm options before install* and click *Next*.
. You will see options for configuring the Istio Helm chart. On the *Components* tab, check the box next to *Enabled CNI*.
. Add a custom overlay file specifying `cniBinDir` and `cniConfDir`. For more information on these options, refer to the https://istio.io/latest/docs/setup/additional-setup/cni/#helm-chart-parameters[Istio documentation.] An example is below:

[tabs]
======
RKE2::
+
--
[,yaml]
----
apiVersion: install.istio.io/v1alpha1
kind: IstioOperator
spec:
  components:
    cni:
      enabled: true
      k8s:
        overlays:
        - apiVersion: "apps/v1"
          kind: "DaemonSet"
          name: "istio-cni-node"
          patches:
          - path: spec.template.spec.containers.[name:install-cni].securityContext.privileged
            value: true
  values:
    cni:
      cniBinDir: /opt/cni/bin
      cniConfDir: /etc/cni/net.d
----
--

K3s::
+
--
[,yaml]
----
apiVersion: install.istio.io/v1alpha1
kind: IstioOperator
spec:
  components:
    cni:
      enabled: true
      k8s:
        overlays:
        - apiVersion: "apps/v1"
          kind: "DaemonSet"
          name: "istio-cni-node"
          patches:
          - path: spec.template.spec.containers.[name:install-cni].securityContext.privileged
            value: true
  values:
    cni:
      cniBinDir: /var/lib/rancher/k3s/data/current/bin
      cniConfDir: /var/lib/rancher/k3s/agent/etc/cni/net.d
----
--
======

*Result:* Now you should be able to utilize Istio as desired, including sidecar injection and monitoring via Kiali.
